fix: Add top margin to AlarmManager to avoid header overlap
- Add top: 20px to position panel below header
- Reduce height to 155px to fit within window (20 + 155 = 175)

--- a/src/components/AlarmManager/AlarmManager.module.scss
+++ b/src/components/AlarmManager/AlarmManager.module.scss
@@ -1,9 +1,9 @@
 .alarmPanel {
     width: 266px;
-    height: 175px;
+    height: 155px;
     padding: 5px;
     position: absolute;
-    top: 0;
+    top: 20px;
     left: 0;
     background-color: #030b11;
     transition: 0.5s all ease-in;
